--- a/tex/math.tex
+++ b/tex/math.tex
@@ -23,12 +23,15 @@ Depending on the context, a variable can be a scalar value, a vector, or a matri
 	\textbf{Variable} & \textbf{Meaning}\\
 	\hline
 	$\eta$ & The learning rate of an optimization algorithm\\
+	$\rho$ & The desired activation probability\\
+	$\hat{\rho}_i$ & The activation probability of a neuron $i$\\
 	$\psi$ & An estimate of the synaptic activity, used for Hebbian learning (i.e. an estimate of $a$)\\
 	$\theta$ & A threshold value that was used instead of the bias $b$ in early versions of neural networks or as goodness threshold in the forward-forward network\\
 	$a$ & The output of an activation function of a single neuron\\
 	$\boldsymbol{a}$ & The output of an activation function in an intermediate layer of a multi-layer network, the output of the model is typically denoted as $\boldsymbol{\hat{y}}$\\
 	$b$ & The bias of a single neuron\\
 	$\boldsymbol{b}$ & The bias of a network layer\\
+	$C$ & The set of classes of a classification task\\
 	$h$ & The latent representations of a network that are typically used in a subsequent downstream task\\
 	$k$ & The number of neurons within a layer\\
 	$L$ & The number of layers of a network\\
